// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard: Introduction Css renders 1`] = `
<Fragment>
  <h2
    id="css"
  >
    CSS
  </h2>
  <p>
    Copy-paste the stylesheet 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;link&gt;
    </PrismCode>
     into your 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;head&gt;
    </PrismCode>
     before all other stylesheets to load our CSS.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <link
      href="https://design.payex.com/TEST/styles/px.css"
      rel="stylesheet"
    />
    <link
      href="https://design.payex.com/TEST/styles/px.dashboard.css"
      rel="stylesheet"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Dashboard: Introduction IntroductionText renders 1`] = `
<div
  className="col-lg-10 doc-body"
>
  <p
    className="lead"
  >
    Get started with the PayEx DesignGuide Dashboard theme.
  </p>
  <QuickStart />
  <JavaScript />
</div>
`;

exports[`Dashboard: Introduction JavaScript renders 1`] = `
<Fragment>
  <h2
    id="javascript"
  >
    JavaScript
  </h2>
  <p>
    Many of our components require the use of JavaScript to function. Place the following 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;script&gt;
    </PrismCode>
     tag near the end of your pages, right before the closing 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;/body&gt;
    </PrismCode>
     tag, to enable them.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <script
      src="https://design.payex.com/TEST/scripts/px-script.js"
    />
    <script
      src="https://design.payex.com/TEST/scripts/px.dashboard.js"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Dashboard: Introduction QuickStart renders 1`] = `
<Fragment>
  <h2
    id="quick-start"
  >
    Quick start
  </h2>
  <p>
    To quickly add the dashboard theme to your project, include the snippets below in your project.
  </p>
</Fragment>
`;

exports[`Dashboard: Introduction renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <IntroductionText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
